--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,6 +5,8 @@
 <style>
   .link-box {
     width: 100%;
+    height: 1.5em;
+    overflow: hidden;
     display: block;
     text-align: center;
   }
