remove spaceless extension

--- a/dastier/templates/readlater.html
+++ b/dastier/templates/readlater.html
@@ -60,9 +60,7 @@
     </div>
     <div>
       Quickly add link to this list with following bookmarklet:
-      <a class="btn btn-primary" href="{% spaceless %}
-        {% include "add_readlater.js" %}
-      {% endspaceless %}">Read it later</a>
+      <a class="btn btn-primary" href="{% include "add_readlater.js" %}">Read it later</a>
     </div>
   </div>
 </div>
