--- a/dastier/templates/welcome.html
+++ b/dastier/templates/welcome.html
@@ -42,9 +42,7 @@
 <div style="clear: both;"></div>
 <div class="container bookmarklet">
   Quickly add link to this list with following bookmarklet:
-<a class="btn btn-primary" href="{% spaceless %}
-{% include "add_home.js" %}
-{% endspaceless %}">Keep home</a>
+<a class="btn btn-primary" href="{% include "add_home.js" %}">Keep home</a>
 </div>
 {% endblock body %}
 
